@@ -3,6 +3,13 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2025-11-10 07:49 UTC+0100 Aleksander Czajczynski (hb fki.pl)
+  * .github/workflows/windows-arm64.yml
+  * .github/workflows/windows.yml
+  * build/openssl/Makefile
+    * separate step for deps needing GNU tools, not to spoil
+      pure zig cc build environment for others
+
 2025-11-10 23:02 UTC+0100 Aleksander Czajczynski (hb fki.pl)
   * .github/workflows/ubuntu-arm64.yml
   * .github/workflows/ubuntu.yml
